examples/test/testpolicy8898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8898
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key15: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value32
          key12: value31
          key22: value46
      podSelector:
        matchLabels:
          key32: value18
          key44: value37
          key40: value24
